add modal message + debug checklist + add next task with condition

--- a/src/app/components/checklist/checklist.component.html
+++ b/src/app/components/checklist/checklist.component.html
@@ -9,7 +9,7 @@
                         <p>{{condition.name}}</p>
                         <label>
                             <input type="checkbox" [(ngModel)]="condition.isChecked" 
-                                (change)="onCheckboxChange(condition.isChecked, condition.name, condition.choice)" />
+                                (click)="onCheckboxChange($event, condition.isChecked, condition.idUnique)" />
                             {{condition.choice}}
                         </label>
                     </li>
