--- a/src/app/components/condition/condition.component.html
+++ b/src/app/components/condition/condition.component.html
@@ -2,37 +2,39 @@
     <div class="center">
         <form class="example-form" (ngSubmit)="saveData()" [formGroup]="conditionForm">
             <table class="example-full-width" cellspacing="0">
-                <tr *ngIf="nextCondition.choice.type === number">
-                    <td>
-                        <mat-form-field appearance="fill">
-                            <mat-label>nextCondition.name</mat-label>
-                            <input matInput type="number" formControlName="dataValue" class="example-right-align">
-                            <span matPrefix>€&nbsp;</span>
-                          </mat-form-field>
-                    </td>
-                </tr>
-                <tr *ngIf="nextCondition.choice.type === boolean">
+                <tr *ngIf="nextCondition.choice.type === 'number'">
                     <td>
                         <mat-form-field>
                             <mat-label>{{nextCondition.name}}</mat-label>
-                            <mat-select [(ngModel)]="dataValue" required>
-                                <mat-option value="true">Si</mat-option>
-                                <mat-option value="false">No</mat-option>
-                            </mat-select>
-                            <mat-error *ngIf="conditionForm.dataValue.hasError('required')">Por favor, elija un valor</mat-error>
+                            <input matInput type="number" formControlName="dataValue" class="example-right-align">
+                            <span matPrefix>€&nbsp;</span>
+                            <mat-error *ngIf="!conditionForm.valid">Por favor, elija un valor</mat-error>
                         </mat-form-field>
                     </td>
                 </tr>
-                <tr *ngIf="nextCondition.choice.type === string">
+                <tr *ngIf="nextCondition.choice.type === 'boolean'">
                     <td>
                         <mat-form-field>
                             <mat-label>{{nextCondition.name}}</mat-label>
-                            <mat-select [(ngModel)]="dataValue" required>
-                              <mat-option *ngFor="let string of stringList" [value]="org">
+                            <mat-select formControlName="dataValue" required>
+                                <mat-option *ngFor="let string of stringList" [value]="string">
+                                  {{ string }}
+                                </mat-option>
+                              </mat-select>
+                            <mat-error *ngIf="!conditionForm.valid">Por favor, elija un valor</mat-error>
+                        </mat-form-field>
+                    </td>
+                </tr>
+                <tr *ngIf="nextCondition.choice.type === 'string'">
+                    <td>
+                        <mat-form-field>
+                            <mat-label>{{nextCondition.name}}</mat-label>
+                            <mat-select formControlName="dataValue" required>
+                              <mat-option *ngFor="let string of stringList" [value]="string">
                                 {{ string }}
                               </mat-option>
                             </mat-select>
-                            <mat-error *ngIf="conditionForm.dataValue.hasError('required')">Por favor, elija un valor</mat-error>
+                            <mat-error *ngIf="!conditionForm.valid">Por favor, elija un valor</mat-error>
                         </mat-form-field>
                     </td>
                 </tr>
