--- a/src/app/components/condition/condition.component.html
+++ b/src/app/components/condition/condition.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="userData?.length > 0">
     <table class="example-full-width" cellspacing="0">
-        <ng-container *ngFor="let data of userData[0].data">
+        <ng-container *ngFor="let data of dataToDisplay">
             <tr>
                 <td>
                     <label>{{data.nameVar}}: </label>
@@ -61,22 +61,22 @@
 </ng-container>
 
 <ng-template #noCondition>
-    <ng-container *ngIf="formToComplete.length > 0; else nothingToDo" >
+    <ng-container *ngIf="formCurrentTask.length > 0; else nothingToDo" >
         <div>
             <form class="example-form" (ngSubmit)="saveData()" [formGroup]="initVarForm">
                 <table class="example-full-width" cellspacing="0">
-                    <tr *ngFor="let form of formToComplete; let i = index">
+                    <tr *ngFor="let form of formCurrentTask; let i = index">
                         <td *ngIf="form.type === 'long'">
                             <mat-form-field>
                                 <mat-label>{{form.label}}</mat-label>
-                                <input matInput type="number" [formControlName]="form.nameVar" class="example-right-align">
+                                <input matInput type="number" [ngModel]="form.value" [formControlName]="form.nameVar" class="example-right-align">
                                 <mat-error *ngIf="!initVarForm.valid">Por favor, elija un valor de tipo número</mat-error>
                             </mat-form-field>
                         </td>
                         <td *ngIf="form.type === 'string'">
                             <mat-form-field>
                                 <mat-label>{{form.label}}</mat-label>
-                                <mat-select *ngIf="form.value.length > 0" [formControlName]="form.nameVar" required>
+                                <mat-select *ngIf="form.value.length > 0" [ngModel]="form.value" [formControlName]="form.nameVar" required>
                                     <mat-option *ngFor="let string of form.value" [value]="string">{{string}}</mat-option>
                                 </mat-select>
                                 <input matInput *ngIf="!(form.value.length > 0)" type="text" [formControlName]="form.nameVar" class="example-right-align">
@@ -86,7 +86,7 @@
                         <td *ngIf="form.type === 'boolean'">
                             <mat-form-field>
                                 <mat-label>{{form.label}}</mat-label>
-                                <mat-select [formControlName]="form.nameVar" required>
+                                <mat-select [ngModel]="form.value" [formControlName]="form.nameVar" required>
                                     <mat-option [value]="true">Si</mat-option>
                                     <mat-option [value]="false">No</mat-option>
                                 </mat-select>
