--- a/src/app/components/condition/condition.component.html
+++ b/src/app/components/condition/condition.component.html
@@ -73,13 +73,19 @@
                                 <mat-error *ngIf="!initVarForm.valid">Por favor, elija un valor de tipo número</mat-error>
                             </mat-form-field>
                         </td>
-                        <td *ngIf="form.type === 'string'">
+                        <td *ngIf="form.type === 'string' && form.value.length > 0">
                             <mat-form-field>
                                 <mat-label>{{form.label}}</mat-label>
-                                <mat-select *ngIf="form.value.length > 0" [ngModel]="form.value" [formControlName]="form.nameVar" required>
+                                <mat-select [ngModel]="form.value" [formControlName]="form.nameVar" required>
                                     <mat-option *ngFor="let string of form.value" [value]="string">{{string}}</mat-option>
                                 </mat-select>
-                                <input matInput *ngIf="!(form.value.length > 0)" type="text" [formControlName]="form.nameVar" class="example-right-align">
+                                <mat-error *ngIf="!initVarForm.valid">Por favor, elija un valor</mat-error>
+                            </mat-form-field>
+                        </td>
+                        <td *ngIf="form.type === 'string' && !(form.value.length > 0)">
+                            <mat-form-field>
+                                <mat-label>{{form.label}}</mat-label>
+                                <input matInput *ngIf="" type="text" [ngModel]="form.value" [formControlName]="form.nameVar" class="example-right-align">
                                 <mat-error *ngIf="!initVarForm.valid">Por favor, elija un valor</mat-error>
                             </mat-form-field>
                         </td>
