--- a/src/app/components/condition/condition.component.html
+++ b/src/app/components/condition/condition.component.html
@@ -13,13 +13,13 @@
     </table>
 </div>
 
-<ng-container *ngIf="nextCondition; else noCondition" >
+<!-- <ng-container *ngIf="nextCondition; else noCondition" >
     <div>
         <form class="example-form" (ngSubmit)="saveData()" [formGroup]="conditionForm">
-            <table class="example-full-width" cellspacing="0">
+            <table class="full-width" cellspacing="0">
                 <tr *ngIf="nextCondition.choice.type === 'number'">
                     <td>
-                        <mat-form-field>
+                        <mat-form-field class="example-full-width">
                             <mat-label>{{nextCondition.name}}</mat-label>
                             <input matInput type="number" formControlName="dataValue" class="example-right-align">
                             <mat-error *ngIf="!conditionForm.valid">Por favor, elija un valor</mat-error>
@@ -28,7 +28,7 @@
                 </tr>
                 <tr *ngIf="nextCondition.choice.type === 'boolean'">
                     <td>
-                        <mat-form-field>
+                        <mat-form-field class="example-full-width">
                             <mat-label>{{nextCondition.name}}</mat-label>
                             <mat-select formControlName="dataValue" required>
                                 <mat-option *ngFor="let string of stringList" [value]="string">
@@ -41,7 +41,7 @@
                 </tr>
                 <tr *ngIf="nextCondition.choice.type === 'string'">
                     <td>
-                        <mat-form-field>
+                        <mat-form-field class="example-full-width">
                             <mat-label>{{nextCondition.name}}</mat-label>
                             <mat-select formControlName="dataValue" required>
                               <mat-option *ngFor="let string of stringList" [value]="string">
@@ -58,23 +58,23 @@
             </p>
         </form>
     </div>
-</ng-container>
+</ng-container> -->
 
 <ng-template #noCondition>
     <ng-container *ngIf="formToComplete.length > 0 && isInitVarFormCreated; else nothingToDo" >
         <div>
             <form class="example-form" (ngSubmit)="saveData()" [formGroup]="initVarForm">
-                <table class="example-full-width" cellspacing="0">
+                <table class="full-width" cellspacing="0">
                     <tr *ngFor="let form of formToComplete; let i = index">
                         <td *ngIf="form.type === 'long'">
-                            <mat-form-field>
+                            <mat-form-field class="example-full-width">
                                 <mat-label>{{form.label}}</mat-label>
                                 <input matInput type="number" [formControlName]="form.nameVar" class="example-right-align">
                                 <mat-error *ngIf="!initVarForm.valid">Por favor, elija un valor de tipo número</mat-error>
                             </mat-form-field>
                         </td>
                         <td *ngIf="form.type === 'string' && form.value.length > 0">
-                            <mat-form-field>
+                            <mat-form-field class="example-full-width">
                                 <mat-label>{{form.label}}</mat-label>
                                 <mat-select [formControlName]="form.nameVar" required>
                                     <mat-option *ngFor="let string of form.value" [value]="string">{{string}}</mat-option>
@@ -83,14 +83,14 @@
                             </mat-form-field>
                         </td>
                         <td *ngIf="form.type === 'string' && !(form.value.length > 0)">
-                            <mat-form-field>
+                            <mat-form-field class="example-full-width">
                                 <mat-label>{{form.label}}</mat-label>
                                 <input matInput type="text" [formControlName]="form.nameVar" class="example-right-align">
                                 <mat-error *ngIf="!initVarForm.valid">Por favor, elija un valor</mat-error>
                             </mat-form-field>
                         </td>
                         <td *ngIf="form.type === 'boolean'">
-                            <mat-form-field>
+                            <mat-form-field class="example-full-width">
                                 <mat-label>{{form.label}}</mat-label>
                                 <mat-select [formControlName]="form.nameVar" required>
                                     <mat-option [value]="true">Si</mat-option>
